Fix issue #935 - Upgrade dev environment to Java 11 and set it as minimum runtime requirement